<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DOB">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:text="@string/got_it"
        android:textColor="#272525"
        android:textSize="20sp"
        android:textStyle="italic"
        app:drawableLeftCompat="@drawable/ic_juice_diet_svgrepo_com"
        app:drawableStartCompat="@drawable/ic_juice_diet_svgrepo_com"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="496dp"
        android:text="@string/dob"
        android:textColor="#272525"
        android:textSize="25sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:layout_constraintVertical_bias="0.114" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="330dp"
        android:layout_height="54dp"
        android:layout_marginBottom="88dp"
        android:gravity="center_horizontal"
        android:lines="2"
        android:text="@string/message"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        app:layout_constraintVertical_bias="0.995" />

    <Button
        android:id="@+id/button6"
        android:layout_width="332dp"
        android:layout_height="52dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/round"
        android:onClick="sixth"
        android:text="@string/nt"
        android:textColor="#fff9dd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="136dp"
        android:layout_height="36dp"
        android:gravity="center"
        android:text="Date Of Birth:"
        android:textColor="#272525"
        android:textSize="20dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/textView17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        app:layout_constraintVertical_bias="0.368" />

    <EditText
        android:id="@+id/edittext01"
        android:layout_width="171dp"
        android:layout_height="54dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="dd/MM/YYYY"
        android:inputType="date"
        android:textColor="#272525"
        app:layout_constraintBottom_toBottomOf="@+id/textView17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        app:layout_constraintVertical_bias="0.298" />

</androidx.constraintlayout.widget.ConstraintLayout>