<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff9dd"
    tools:context=".choice">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:text="@string/let_s_get_to_know_you_better"
        android:textColor="#272525"
        android:textSize="20sp"
        android:textStyle="italic"
        app:drawableLeftCompat="@drawable/ic_juice_diet_svgrepo_com"
        app:drawableStartCompat="@drawable/ic_juice_diet_svgrepo_com"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="356dp"
        android:layout_height="51dp"
        android:gravity="center"
        android:text="@string/what_goal_do_you_have_in_mind"
        android:textColor="#272525"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.034" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="330dp"
        android:layout_height="54dp"
        android:gravity="center_horizontal"
        android:lines="2"
        android:text="@string/message"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.821" />

    <Button
        android:id="@+id/button4"
        android:layout_width="321dp"
        android:layout_height="52dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/round"
        android:text="@string/choice"
        android:textColor="#fff9dd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="407dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        android:background="#fff9dd"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview1"
            android:layout_width="350dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"

             >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="61dp"
                    android:drawablePadding="20dp"
                    android:gravity="center"
                    android:paddingLeft="107dp"
                    android:text="LOSE WEIGHT"
                    android:textColor="#090707"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ic_health_care_svgrepo_com"
                    android:drawableStart="@drawable/ic_health_care_svgrepo_com"
                    app:drawableLeftCompat="@drawable/ic_health_care_svgrepo_com"
                    android:drawableLeft="@drawable/ic_health_care_svgrepo_com" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview2"
            android:layout_width="350dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="61dp"
                    android:drawableStart="@drawable/ic_health_care_svgrepo_com"
                    android:drawableLeft="@drawable/ic_health_care_svgrepo_com"
                    android:drawablePadding="20dp"
                    android:gravity="center"
                    android:paddingLeft="107dp"
                    android:text="@string/maintain_weight"
                    android:textColor="#090707"
                    android:textSize="16sp"
                    android:paddingStart="107dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>