<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Gender">
    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:text="@string/great_let_s_continue"
        android:textColor="#272525"
        android:textSize="20sp"
        android:textStyle="italic"
        app:drawableLeftCompat="@drawable/ic_juice_diet_svgrepo_com"
        app:drawableStartCompat="@drawable/ic_juice_diet_svgrepo_com"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />
    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="496dp"
        android:text="@string/what_s_your_gender"
        android:textColor="#272525"
        android:textSize="25sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.114" />

    <Button
        android:id="@+id/button5"
        android:layout_width="332dp"
        android:layout_height="52dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/round"
        android:onClick="fifth"
        android:text="@string/nt"
        android:textColor="#fff9dd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="330dp"
        android:layout_height="54dp"
        android:layout_marginBottom="88dp"
        android:gravity="center_horizontal"
        android:lines="2"
        android:text="@string/message"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintVertical_bias="0.821"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="376dp"
        android:layout_height="365dp"
        android:orientation="vertical"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.515">


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="350dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:drawablePadding="0dp"
                android:drawableLeft="@drawable/ic_male_svgrepo_com"
                android:gravity="center"
                android:paddingRight="215dp"
                android:paddingLeft="40dp"
                android:text="MALE"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_male_svgrepo_com"
                android:drawableStart="@drawable/ic_male_svgrepo_com"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_selecter"
                android:textColor="@drawable/text_color"
                android:elevation="5dp"
                 />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="350dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:paddingLeft="40dp"
                android:drawableLeft="@drawable/ic_female_svgrepo_com"
                android:gravity="center"
                android:paddingRight="215dp"
                android:text=" FEMALE"
                android:textSize="16sp"
                android:drawableStart="@drawable/ic_female_svgrepo_com"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_selecter"
                android:textColor="@drawable/text_color"
                android:elevation="5dp" />
        </RadioGroup>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>